test/errors/types/tuple_index_out_of_range_fail.hy
int main()
{
    (int, string) pair = (1, "hi")
    int x = pair[2]
    return 0
}
